--- a/angular_tasks/angular-hometask2/src/app/modules/userlist/userlist/userlist.component.html
+++ b/angular_tasks/angular-hometask2/src/app/modules/userlist/userlist/userlist.component.html
@@ -1,4 +1,3 @@
-
 <div>
-    <app-user [in_user_current_page_flag_obj]="current_page_flag_value" *ngFor="let user of user_card_details" [card]="user"></app-user>
+    <app-user [user_arr_attr]="user_card_details" [in_user_current_page_flag_obj]="current_page_flag_value" *ngFor="let user of user_card_details" [card]="user"></app-user>
 </div>
