--- a/angular_tasks/angular-hometask2/src/app/modules/manage/manage/manage.component.html
+++ b/angular_tasks/angular-hometask2/src/app/modules/manage/manage/manage.component.html
@@ -1,4 +1,6 @@
-
+<div style="text-align: right;">
+    <button class="btn btn-success" (click)="create()">Create</button>
+</div>
 <div class="row">
     <div class="col-6">
         <app-userlist [current_page_flag_obj]="current_page_flag"></app-userlist>
